--- a/contatos.html
+++ b/contatos.html
@@ -31,7 +31,7 @@
             <h1><strong>Entre em contato conosco:</strong></h1>
             <div class="whatsapp">
                 <a href="https://wa.me/whatsappphonenumber?text=urlencodedtext"><img src="imagens/Whatsapp.webp" alt=""></a>
-                <p>Whatsapp:<!--Colocar o whatsapp dele--></p>
+                <p>Whatsapp:62 982480546</p>
             </div>
             <div class="facebook">
                 <a href=""><img src="imagens/Facebook.png" alt=""></a>
@@ -43,7 +43,7 @@
             </div>
             <div class="gmail">
                 <a href="https://mail.google.com/"><img src="imagens/Gmail.webp" alt=""></a>
-                <p>Gmail:<!--Colocar o gmail dele--></p>
+                <p>Gmail:geanassis@gmail.com</p>
             </div>    
         </div>
         <div class="mapa">
