6 commit- com alterações Básicas

--- a/feedback.html
+++ b/feedback.html
@@ -7,23 +7,13 @@
     <title>Feedback</title>
 </head>
 <body>
-    <header>
-        <h1><strong>GEAN BARBEARIA</strong></h1>
-        <img src="/imagens/Logo01.png" alt=""> <!--Imagem está dando problema, resolver mais tarde-->
-        <div class="menu">
-            <div class="parte1">
-                <nav>
-                    <a href="servicos.html">Serviços</a>
-                    <a href="contatos.html">Contatos</a>
-                    <h3>Feedback</h3>
-                </nav>
-            </div>
-            <div class="parte2">
-                <nav>
-                    <a href="principal.html">Voltar</a>
-                </nav>
-            </div>
-        </div>
+    <header class="cabecalho">
+        <img  class="cabecalho-imagem" src="/GeanBarbearia/imagens/Logo01.png" alt=""> <!--Imagem está dando problema, resolver mais tarde-->
+        <nav class="cabecalho-menu">
+            <a href="servicos.html">Agende um serviço!</a>
+            <a href="contatos.html">Contatos</a>
+            <a href="feedback.html">Feedback</a>
+        </nav>
     </header>
 
     <main>
