--- a/principal.html
+++ b/principal.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="/imagens/Logo01.png" alt=""> <!--Imagem está dando problema, resolver mais tarde-->
+        <img class="cabecalho-imagem" src="/GeanBarbearia/imagens/Logo01.png" alt=""> <!--Imagem está dando problema, resolver mais tarde-->
         <nav class="cabecalho-menu">
             <a href="servicos.html">Agende um serviço!</a>
             <a href="contatos.html">Contatos</a>
