--- a/servicos.html
+++ b/servicos.html
@@ -8,19 +8,24 @@
 </head>
 <body>
     <header>
-        <h1><strong>GEAN BARBEARIA</strong></h1>
-        <img src="/imagens/Logo01.png" alt=""> <!--Imagem está dando problema, resolver mais tarde-->
-        <div class="menu">
-            <h3>Serviços</h3>
-            <nav>
+        <header class="cabecalho">
+            <img class="cabecalho-imagem" src="/GeanBarbearia/imagens/Logo01.png" alt=""> <!--Imagem está dando problema, resolver mais tarde-->
+            <nav class="cabecalho-menu">
+                <a href="servicos.html">Agende um serviço!</a>
                 <a href="contatos.html">Contatos</a>
                 <a href="feedback.html">Feedback</a>
-                <a href="principal.html">Voltar</a>
             </nav>
-        </div>
+        </header>
     </header>
 
     <main>
+        <div class="cabecalho">
+            <img class="imagem-elemento" src="imagens/elemento.png" alt="">
+           <div> <h1>Agende</h1>
+            <h1>seu Horário!</h1> </div>
+            <img class="imagem-utensilios" src="imagens/utensilios.png" alt="">
+        </div>
+
         <div class="servicos">
             <div class="corteCabelo">
                 <img src="imagens/Imagem Corte de cabelo.jpg" alt="">
