--- a/feedback.html
+++ b/feedback.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header class="cabecalho">
+        <a href="/GeanBarbearia/principal.html">
         <img  class="cabecalho-imagem" src="/GeanBarbearia/imagens/Logo01.png" alt=""> <!--Imagem está dando problema, resolver mais tarde-->
+        </a>
         <nav class="cabecalho-menu">
             <a href="servicos.html">Agende um serviço!</a>
             <a href="contatos.html">Contatos</a>
@@ -22,7 +24,7 @@
     </main>
 
     <footer>
-       <!--Deve ser feito-->> 
+       <!--Deve ser feito-->
     </footer>
 </body>
 </html>
