--- a/principal.html
+++ b/principal.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header class="cabecalho">
+        <a href="#"> 
         <img class="cabecalho-imagem" src="/GeanBarbearia/imagens/Logo01.png" alt=""> <!--Imagem está dando problema, resolver mais tarde-->
+        </a>
         <nav class="cabecalho-menu">
             <a href="servicos.html">Agende um serviço!</a>
             <a href="contatos.html">Contatos</a>
@@ -17,7 +19,7 @@
     </header>
     
     <main>
-        <!--Inicio-->>
+        <!--Inicio-->
         <div class="historiaBarbearia">
             <img src="imagens/fachada.png" alt="Fachada">
             <div class="conteudo-escrito">
@@ -27,7 +29,7 @@
                     "</p>
             </div>
         </div>
-        <!--Meio-->>
+        <!--Meio-->
         <div class="historiaMeioBarbearia">
           
             <div class="conteudo-escrito-meio">
@@ -41,15 +43,15 @@
             </div>
             <img src="imagens/geanb.jpg" alt="Gean Barbeiro">
         </div>
-        <!--Hoje-->>
+        <!--Hoje-->
         <div> <div class="historiaHojeBarbearia">
               <img src="imagens/jlbarbearia.png" alt="">  
             <div>
                 <p>Hoje, a GEAN BARBEARIA é muito mais que um lugar para cortar cabelo. É um ponto de encontro, uma comunidade, um símbolo de que o sucesso não vem só de talento, mas de visão, humildade e constância. Gean continua lá, máquina na mão.
                 </p>
              </div> </div>
-            <H2>"Aqui você não corta o cabelo. Você vive a experiência."</H2>
         </div>
+        <H2>"Aqui você não corta o cabelo. Você vive a experiência."</H2>
     </main>
 
     <footer>
@@ -57,5 +59,8 @@
             <p>Entre em contato conosco</p>
         </div>     
     </footer>
+    <div class="mapa">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3822.6983281645844!2d-49.309997925082875!3d-16.641902684123632!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935ef36e7354488f%3A0xcd463b86d2bf2847!2sUNIALFA%20Unidade%20Perimetral!5e0!3m2!1spt-BR!2sbr!4v1745476374732!5m2!1spt-BR!2sbr" width="1350" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
 </body>
 </html>
