--- a/servicos.html
+++ b/servicos.html
@@ -7,9 +7,11 @@
     <title>Serviços</title>
 </head>
 <body>
-    <header>
-        <header class="cabecalho">
+    <header class="cabecalho">
+        <header class="cabecalho-menu">
+            <a href="/GeanBarbearia/principal.html">
             <img class="cabecalho-imagem" src="/GeanBarbearia/imagens/Logo01.png" alt=""> <!--Imagem está dando problema, resolver mais tarde-->
+            </a>
             <nav class="cabecalho-menu">
                 <a href="servicos.html">Agende um serviço!</a>
                 <a href="contatos.html">Contatos</a>
@@ -19,9 +21,9 @@
     </header>
 
     <main>
-        <div class="cabecalho">
+        <div class="inicio-servicos">
             <img class="imagem-elemento" src="imagens/elemento.png" alt="">
-           <div> <h1>Agende</h1>
+           <div class="titulo"> <h1>Agende</h1>
             <h1>seu Horário!</h1> </div>
             <img class="imagem-utensilios" src="imagens/utensilios.png" alt="">
         </div>
