Commit 7 - Modificações Feedback

--- a/feedback.html
+++ b/feedback.html
@@ -19,8 +19,31 @@
     </header>
 
     <main>
-        <h1>babydobaby</h1>
-        <h2>Teste de atualização</h2>
+       <div class="Feedback">
+            <div class="Titulo-Feedback">
+                <h1>Avaliações</h1>
+            </div>
+            <div class="Imagem-Feedback">
+                <div class="Bloco_1">
+                    <img src="imagens/Imagem - Teste Parte Feedback.jpg" alt="">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa expedita harum sit beatae illum quo cupiditate sequi totam sunt, fugiat maxime necessitatibus eum similique, animi iure sapiente ex. Saepe, quis.</p>
+                    <img src="imagens/Imagem - Teste Parte Feedback.jpg" alt="" style="margin-left: 75px;">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque at molestiae optio a exercitationem, quibusdam porro dolor itaque quaerat tempora, rerum voluptatibus id harum. Ipsam minima unde fuga id obcaecati?</p>
+                </div>
+                <div class="Bloco_2">
+                    <img src="imagens/Imagem - Teste Parte Feedback.jpg" alt="">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error rem a consequuntur minima non nisi quidem eius aut reiciendis itaque blanditiis fugiat id iste vitae, laboriosam, eveniet mollitia! Ab, repellendus!</p>
+                    <img src="imagens/Imagem - Teste Parte Feedback.jpg" alt="" style="margin-left: 100px;">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam voluptates id, alias quas exercitationem ducimus unde, odit officia eligendi, laudantium error assumenda dignissimos sunt voluptas doloribus voluptatem maiores veniam incidunt.</p>
+                </div>
+                <div class="Bloco_3">
+                    <img src="imagens/Imagem - Teste Parte Feedback.jpg" alt="">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat ex eaque excepturi aliquam repellendus aut, nobis, quibusdam numquam officia eum accusamus ut distinctio quis eius fugit tempore explicabo modi. Aspernatur.</p>
+                    <img src="imagens/Imagem - Teste Parte Feedback.jpg" alt="" style="margin-left: 25px;">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis vitae cum nisi consequatur et similique animi perspiciatis vero. Eligendi commodi hic quos dignissimos beatae dolor ex molestias possimus velit provident!</p>
+                </div>
+            </div>
+       </div>
     </main>
 
     <footer>
