segunda alteração rodape

--- a/principal.html
+++ b/principal.html
@@ -58,7 +58,7 @@
     <footer>
         <div id="footer_content">
             <div id="footer_contatos"> 
-                <h1>Entre em contato conosco</h1>
+                <h3>Entre em contato conosco</h3>
                 <p>Siga-nos em nossas redes sociais</p>
                 <div id="footer_rede_social">
                     <a  href="https://wa.me/whatsappphonenumber?text=urlencodedtext " class="footer-link" id="whatsapp">
@@ -73,11 +73,18 @@
                 </div>
             </div>
             <!-- <div class="footer_mapa">
+                <h3>Localização no Mapa</h3>
+                <p>Veja nossa localização:</p>
+                <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3822.6983281645844!2d-49.309997925082875!3d-16.641902684123632!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935ef36e7354488f%3A0xcd463b86d2bf2847!2sUNIALFA%20Unidade%20Perimetral!5e0!3m2!1spt-BR!2sbr!4v1745476374732!5m2!1spt-BR!2sbr" width="1350" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div> -->
+            <!-- <div class="footer_mapa">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3822.6983281645844!2d-49.309997925082875!3d-16.641902684123632!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935ef36e7354488f%3A0xcd463b86d2bf2847!2sUNIALFA%20Unidade%20Perimetral!5e0!3m2!1spt-BR!2sbr!4v1745476374732!5m2!1spt-BR!2sbr" width="1350" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div> -->
             <div id="footer_enviar">
                 <div id="input_group">
-                    <input type="email" id="email">
+                    <input type="email" id="email" placeholder="Seu e-mail">
                     <button>
                         <i class="fa-regular fa-envelope"></i>
                     </button>
