Commit - Alterações simples

--- a/principal.html
+++ b/principal.html
@@ -10,12 +10,12 @@
 <body>
     <header class="cabecalho">
         <a href="#"> 
-        <img class="cabecalho-imagem" src="/GeanBarbearia/imagens/Logo01.png" alt=""> <!--Imagem está dando problema, resolver mais tarde-->
+        <img class="cabecalho-imagem" src="imagens/Logo01.png" alt=""> <!--Imagem está dando problema, resolver mais tarde-->
         </a>
         <nav class="cabecalho-menu">
             <a href="servicos.html">Agende um serviço!</a>
-            <a href="contatos.html">Contatos</a>
-            <a href="feedback.html">Feedback 1</a>
+            <a href="#footer-header">Contatos</a>
+            <a href="feedback.html">Feedback</a>
         </nav>
     </header>
     
@@ -55,7 +55,7 @@
         <H2>"Aqui você não corta o cabelo. Você vive a experiência."</H2>
     </main>
 
-    <footer>
+    <footer id="footer-header">
         <div id="footer_content">
             <div id="footer_contatos"> 
                 <h3>Entre em contato conosco</h3>
