--- a/feedback.html
+++ b/feedback.html
@@ -45,6 +45,31 @@
                 </div>
             </div>
        </div>
+       <div class="div_formulario">
+            <h1>Deixe a sua avaliação da nossa empresa</h1>
+       </div>
+       <div class="box_avaliacao">
+        <div>
+            <img src="imagens/Imagem barbearia (ilustrativa).webp" alt="">
+        </div>
+            <div class="box_formulario">
+                <form action="#" method="post"></form>
+                    <div class="box_nome">
+                        <label for="nome">Nome</label>
+                        <br>
+                        <input type="text" id="nome" name="nome" required placeholder="Digite seu nome">
+                    </div>
+                    <br>
+                    <div class="box_questionario">
+                        <label for="avaliacao">Avaliação</label>
+                        <br>
+                        <textarea name="avaliacao" id="avaliacao" placeholder="Digite sua avaliação"></textarea>
+                    </div>
+                    <br>
+                    <button>Enviar</button>
+                </form>
+            </div>
+       </div>
     </main>
 
     <footer id="footer-header">
