Commit: Feedback Pré-Pronto

--- a/feedback.html
+++ b/feedback.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="feedback.css">
-    <title>Feedback</title>
+    <title>Feedback - Gean Barbearia</title>
 </head>
 <body>
     <header class="cabecalho">
@@ -26,22 +26,82 @@
             </div>
             <div class="Imagem-Feedback">
                 <div class="Bloco_1">
-                    <img src="imagens/Imagem - Teste Parte Feedback.jpg" alt="">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa expedita harum sit beatae illum quo cupiditate sequi totam sunt, fugiat maxime necessitatibus eum similique, animi iure sapiente ex. Saepe, quis.</p>
-                    <img src="imagens/Imagem - Teste Parte Feedback.jpg" alt="" style="margin-left: 75px;">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque at molestiae optio a exercitationem, quibusdam porro dolor itaque quaerat tempora, rerum voluptatibus id harum. Ipsam minima unde fuga id obcaecati?</p>
+                    <img src="imagens/TestePessoas.png" alt="">
+                    <div class="star_1">
+                        <p style="margin-top: 110px; margin-left: 200px; font-size: 34px;">Luís</p>
+                        <p style="font-size: 34px;">A Gean Barbearia é simplesmente sensacional! Atendimento impecável, corte perfeito e ambiente super agradável. Cliente fiel a partir de agora!</p>
+                        <div class="star-rating" style="display: flex; color: #ff9529; font-size: 1.4rem;">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                          </div>
+                    </div>
+                    <img src="imagens/TestePessoas.png" alt="" style="margin-left: 75px;">
+                    <div class="star_2">
+                        <p style="margin-top: 110px; margin-left: 200px; font-size: 34px">Felipe</p>
+                        <p style="font-size: 34px;">Sempre que venho na Gean Barbearia, saio satisfeito. Profissionalismo, pontualidade e um ótimo papo enquanto corto o cabelo!</p>
+                        <div class="star-rating" style="display: flex; color: #ff9529; font-size: 1.4rem;">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                          </div>
+                    </div>
                 </div>
                 <div class="Bloco_2">
-                    <img src="imagens/Imagem - Teste Parte Feedback.jpg" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error rem a consequuntur minima non nisi quidem eius aut reiciendis itaque blanditiis fugiat id iste vitae, laboriosam, eveniet mollitia! Ab, repellendus!</p>
-                    <img src="imagens/Imagem - Teste Parte Feedback.jpg" alt="" style="margin-left: 100px;">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam voluptates id, alias quas exercitationem ducimus unde, odit officia eligendi, laudantium error assumenda dignissimos sunt voluptas doloribus voluptatem maiores veniam incidunt.</p>
+                    <img src="imagens/TestePessoas.png" alt="">
+                    <div class="star_3">
+                        <p style="margin-top: 110px; margin-left: 200px; font-size: 34px;">Marcos</p>
+                        <p style="font-size: 34px;">Agendei pelo site com facilidade e fui muito bem atendido. A Gean Barbearia realmente entrega qualidade e atenção aos detalhes.</p>
+                        <div class="star-rating" style="display: flex; color: #ff9529; font-size: 1.4rem;">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                          </div>
+                    </div>
+                    <img src="imagens/TestePessoas.png" alt="" style="margin-left: 100px;">
+                    <div class="star_4">
+                        <p style="margin-top: 110px; margin-left: 200px; font-size: 34px;">José</p>
+                        <p style="font-size: 34px;">Excelente atendimento e ambiente acolhedor. O Gean entende exatamente o estilo que a gente quer. Recomendo demais!</p>
+                        <div class="star-rating" style="display: flex; color: #ff9529; font-size: 1.4rem;">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                          </div>
+                    </div>
                 </div>
                 <div class="Bloco_3">
-                    <img src="imagens/Imagem - Teste Parte Feedback.jpg" alt="">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat ex eaque excepturi aliquam repellendus aut, nobis, quibusdam numquam officia eum accusamus ut distinctio quis eius fugit tempore explicabo modi. Aspernatur.</p>
-                    <img src="imagens/Imagem - Teste Parte Feedback.jpg" alt="" style="margin-left: 25px;">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis vitae cum nisi consequatur et similique animi perspiciatis vero. Eligendi commodi hic quos dignissimos beatae dolor ex molestias possimus velit provident!</p>
+                    <img src="imagens/TestePessoas.png" alt="">
+                    <div class="star_5">
+                        <p style="margin-top: 110px; margin-left: 200px; font-size: 34px;">Paulo</p>
+                        <p style="font-size: 34px;" >Sou cliente da Gean Barbearia há meses e nunca me decepcionei. Cortes bem feitos, barba alinhada e um serviço de primeira.</p>
+                        <div class="star-rating" style="display: flex; color: #ff9529; font-size: 1.4rem;">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                          </div>
+                    </div>
+                    <img src="imagens/TestePessoas.png" alt="" style="margin-left: 25px;">
+                    <div class="star_6">
+                        <p style="margin-top: 110px; margin-left: 200px; font-size: 34px;">João</p>
+                        <p style="font-size: 34px;">Ambiente limpo, organizado e atendimento nota 10! O Gean é muito profissional e atencioso. Vale cada visita!</p>
+                        <div class="star-rating" style="display: flex; color: #ff9529; font-size: 1.4rem;">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                          </div>
+                    </div>
                 </div>
             </div>
        </div>
@@ -50,18 +110,18 @@
        </div>
        <div class="box_avaliacao">
         <div>
-            <img src="imagens/Imagem barbearia (ilustrativa).webp" alt="">
+            <img src="imagens/fachada.png" alt="">
         </div>
             <div class="box_formulario">
                 <form action="#" method="post"></form>
                     <div class="box_nome">
-                        <label for="nome">Nome</label>
+                        <label for="nome">Nome:</label>
                         <br>
                         <input type="text" id="nome" name="nome" required placeholder="Digite seu nome">
                     </div>
                     <br>
                     <div class="box_questionario">
-                        <label for="avaliacao">Avaliação</label>
+                        <label for="avaliacao">Avaliação:</label>
                         <br>
                         <textarea name="avaliacao" id="avaliacao" placeholder="Digite sua avaliação"></textarea>
                     </div>
