--- a/servicos.html
+++ b/servicos.html
@@ -21,12 +21,42 @@
 
     <main>
         <div class="inicio-servicos">
+            <div class="Imagem-fundo">
+                <img src="imagens/image-is-photo-interior-barbershop.png" alt="">
+            </div>
             <img class="imagem-elemento" src="imagens/elemento.png" alt="">
            <div class="titulo"> <h1>Agende</h1>
             <h1>seu Horário!</h1> </div>
             <img class="imagem-utensilios" src="imagens/utensilios.png" alt="">
         </div>
 
+        <div class="servicos">
+            <div class="corte_cabelo">
+                <img src="imagens/LOGO-WHITE.png" alt="" class="logo_white">
+                <img src="imagens/Pattern_serviços.jpg" alt="" class="pattern">
+                <h1>Corte de Cabelo</h1>
+                <br>
+                <p>R$30,00</p>
+                <button><strong>Agendar</strong></button>
+            </div>
+            <div class="corte_barba">
+                <img src="imagens/LOGO-WHITE.png" alt="" class="logo_white">
+                <img src="imagens/Pattern_serviços.jpg" alt="" class="pattern">
+                <h1>Corte de Barba</h1>
+                <br>
+                <p>R$25,00</p>
+                <button><strong>Agendar</strong></button>
+            </div>
+            <div class="quimicas">
+                <img src="imagens/LOGO-WHITE.png" alt="" class="logo_white">
+                <img src="imagens/Pattern_serviços.jpg" alt="" class="pattern">
+                <h1>Químicos</h1>
+                <br>
+                <p>R$100,00</p>
+                <button><strong>Agendar</strong></button>
+            </div>
+        </div>
+        <!--
         <div class="servicos">
             <div class="corteCabelo">
                 <img src="imagens/Imagem Corte de cabelo.jpg" alt="">
@@ -40,6 +70,7 @@
         <div class="video">
             <video src="videos/3998516-uhd_4096_2160_25fps.mp4" autoplay muted loop ></video>
         </div>
+        -->
     </main>
 
     <footer id="footer-header">
