--- a/servicos.html
+++ b/servicos.html
@@ -55,6 +55,14 @@
                 <p>R$100,00</p>
                 <button><strong>Agendar</strong></button>
             </div>
+            <div class="sombrancelha">
+                <img src="imagens/LOGO-WHITE.png" alt="" class="logo_white">
+                <img src="imagens/Pattern_serviços.jpg" alt="" class="pattern">
+                <h1>Sombrancelha</h1>
+                <br>
+                <p>R$10,00</p>
+                <button><strong>Agendar</strong></button>
+            </div>
         </div>
         <!--
         <div class="servicos">
