--- a/feedback.html
+++ b/feedback.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="feedback.css">
     <title>Feedback - Gean Barbearia</title>
 </head>
-<body>
+<body id="topo">
     <header class="cabecalho">
         <a href="principal.html">
         <img  class="cabecalho-imagem" src="imagens/Logo01.png" alt=""> <!--Imagem está dando problema, resolver mais tarde-->
@@ -174,5 +174,6 @@
             Gean Barbearia 2025 .Todos os dieitos reservados
         </div>
     </footer>
+    <a href="#topo" class="voltar-topo" title="Voltar ao topo">↑</a>
 </body>
 </html>
