--- a/principal.html
+++ b/principal.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="principal.css">
     <title>Início - Gean Barbearia</title>
 </head>
-<body>
+<body id="topo">
     <header class="cabecalho">
         <a href="#"> 
         <img class="cabecalho-imagem" src="imagens/Logo01.png" alt=""> <!--Imagem está dando problema, resolver mais tarde-->
@@ -54,7 +54,6 @@
         </div>
         <H2>"Aqui você não corta o cabelo. Você vive a experiência."</H2>
     </main>
-
     <footer id="footer-header">
         <div id="footer_content">
             <div id="footer_contatos"> 
@@ -97,5 +96,6 @@
             Gean Barbearia 2025 .Todos os dieitos reservados
         </div>
     </footer>
+    <a href="#topo" class="voltar-topo" title="Voltar ao topo"> ↑</a>
 </body>
 </html>
