--- a/feedback.html
+++ b/feedback.html
@@ -9,7 +9,7 @@
 </head>
 <body id="topo">
     <header class="cabecalho">
-        <a href="principal.html">
+        <a href="index.html">
         <img  class="cabecalho-imagem" src="imagens/Logo01.png" alt=""> <!--Imagem está dando problema, resolver mais tarde-->
         </a>
         <nav class="cabecalho-menu">
