--- a/public/pages/feedback.html
+++ b/public/pages/feedback.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="feedback.css">
+    <link rel="stylesheet" href="/public/assets/css/feedback.css">
     <title>Feedback - Gean Barbearia</title>
 </head>
 <body id="topo">
     <header class="cabecalho">
         <a href="index.html">
-        <img  class="cabecalho-imagem" src="imagens/Logo01.png" alt=""> <!--Imagem está dando problema, resolver mais tarde-->
+        <img  class="cabecalho-imagem" src="/public/assets/css/imagens/Logo01.png" alt=""> <!--Imagem está dando problema, resolver mais tarde-->
         </a>
         <nav class="cabecalho-menu">
             <a href="servicos.html">Agende um serviço!</a>
@@ -26,7 +26,7 @@
             </div>
             <div class="Imagem-Feedback">
                 <div class="Bloco_1">
-                    <img src="imagens/TestePessoas.png" alt="">
+                    <img src="/public/assets/css/imagens/TestePessoas.png" alt="">
                     <div class="star_1">
                         <p style="margin-top: 110px; margin-left: 200px; font-size: 34px;">Luís</p>
                         <p style="font-size: 34px;">A Gean Barbearia é simplesmente sensacional! Atendimento impecável, corte perfeito e ambiente super agradável. Cliente fiel a partir de agora!</p>
@@ -38,7 +38,7 @@
                             <span class="fa fa-star checked"></span>
                           </div>
                     </div>
-                    <img src="imagens/TestePessoas.png" alt="" style="margin-left: 75px;">
+                    <img src="/public/assets/css/imagens/TestePessoas.png" alt="" style="margin-left: 75px;">
                     <div class="star_2">
                         <p style="margin-top: 110px; margin-left: 200px; font-size: 34px">Felipe</p>
                         <p style="font-size: 34px;">Sempre que venho na Gean Barbearia, saio satisfeito. Profissionalismo, pontualidade e um ótimo papo enquanto corto o cabelo!</p>
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <div class="Bloco_2">
-                    <img src="imagens/TestePessoas.png" alt="">
+                    <img src="/public/assets/css/imagens/TestePessoas.png" alt="">
                     <div class="star_3">
                         <p style="margin-top: 110px; margin-left: 200px; font-size: 34px;">Marcos</p>
                         <p style="font-size: 34px;">Agendei pelo site com facilidade e fui muito bem atendido. A Gean Barbearia realmente entrega qualidade e atenção aos detalhes.</p>
@@ -64,7 +64,7 @@
                             <span class="fa fa-star checked"></span>
                           </div>
                     </div>
-                    <img src="imagens/TestePessoas.png" alt="" style="margin-left: 100px;">
+                    <img src="/public/assets/css/imagens/TestePessoas.png" alt="" style="margin-left: 100px;">
                     <div class="star_4">
                         <p style="margin-top: 110px; margin-left: 200px; font-size: 34px;">José</p>
                         <p style="font-size: 34px;">Excelente atendimento e ambiente acolhedor. O Gean entende exatamente o estilo que a gente quer. Recomendo demais!</p>
@@ -78,7 +78,7 @@
                     </div>
                 </div>
                 <div class="Bloco_3">
-                    <img src="imagens/TestePessoas.png" alt="">
+                    <img src="/public/assets/css/imagens/TestePessoas.png" alt="">
                     <div class="star_5">
                         <p style="margin-top: 110px; margin-left: 200px; font-size: 34px;">Paulo</p>
                         <p style="font-size: 34px;" >Sou cliente da Gean Barbearia há meses e nunca me decepcionei. Cortes bem feitos, barba alinhada e um serviço de primeira.</p>
@@ -90,7 +90,7 @@
                             <span class="fa fa-star checked"></span>
                           </div>
                     </div>
-                    <img src="imagens/TestePessoas.png" alt="" style="margin-left: 25px;">
+                    <img src="/public/assets/css/imagens/TestePessoas.png" alt="" style="margin-left: 25px;">
                     <div class="star_6">
                         <p style="margin-top: 110px; margin-left: 200px; font-size: 34px;">João</p>
                         <p style="font-size: 34px;">Ambiente limpo, organizado e atendimento nota 10! O Gean é muito profissional e atencioso. Vale cada visita!</p>
@@ -110,7 +110,7 @@
        </div>
        <div class="box_avaliacao">
         <div>
-            <img src="imagens/fachada.png" alt="">
+            <img src="/public/assets/css/imagens/fachada.png" alt="">
         </div>
             <div class="box_formulario">
                 <form action="#" method="post"></form>
